--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,19 @@
 #moon{
     display: none;
 }
+
+.grid{
+    display: grid;
+    grid-template-columns: 1% 1fr 3fr 1fr 1%;
+    grid-template-rows: 1fr 0.6fr 3fr 3fr 1fr;
+
+    grid-template-areas: 
+    ". theme header settings ."
+    ". nav nav nav ."
+    ". content1 content2 content3 ."
+    ". readme1 readme2 readme3 .";
+}
+
+.fa-moon, .fa-sun{
+    grid-area: theme;
+}
