--- a/Style.css
+++ b/Style.css
@@ -5,7 +5,7 @@
 .grid{
     display: grid;
     grid-template-columns: 1% 1fr 3fr 1fr 1%;
-    grid-template-rows: 1fr 0.6fr 3fr 3fr 1fr;
+    grid-template-rows: 1fr 0.6fr 3fr 1fr;
 
     grid-template-areas: 
     ". theme header settings ."
@@ -16,4 +16,5 @@
 
 .fa-moon, .fa-sun{
     grid-area: theme;
+    
 }
