--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,8 @@
+:root{
+    --main_color: #454;
+    --border-color: #333;
+}
+
 #moon{
     display: none;
 }
@@ -20,7 +25,7 @@ body{
 .grid{
     display: grid;
     grid-template-columns: 1% 1fr 1fr 1fr 1%;
-    grid-template-rows: 1fr 0.6fr 3fr 1fr;
+    grid-template-rows: 50px 40px 3fr 1fr;
 
     grid-template-areas: 
     ". head head head ."
@@ -59,6 +64,25 @@ header{
 
 .navbar{
     grid-area: nav;
+    .whereYouAre{
+        background: var(--main_color);
+    }
+    #dropdown{
+        display: none;
+        position: relative;
+        left: 85px;
+        border: var(--border-color) solid 1px;
+        width: 80px;
+        padding: 5px;
+        div{
+            list-style: disc;
+            border-radius: 30px;
+            :hover{
+                background: var(--main_color);
+            }
+            text-align: center;
+        }
+    }
 }
 
 .content{
@@ -67,4 +91,8 @@ header{
 
 .readme{
     grid-area: readme;
+}
+
+.button{
+    border-color: var(--border-color)
 }
