--- a/Style.css
+++ b/Style.css
@@ -112,6 +112,9 @@ header{
         margin: 10px;
         font-size: 0.8em;
     }
+    .news{
+        font-size: 2.5em;
+    }
 
     .content1{
         grid-area: content1;
@@ -146,7 +149,7 @@ header{
     border-color: var(--border-color)
 }
 
-@media (min-width: 600px){
+@media (min-width: 700px){
     body *{
         display: none;
     }
@@ -160,4 +163,17 @@ header{
         display: block;
         color: #ef0602;
     }
+}
+
+.content:has(#Game){
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    aspect-ratio: 1;
+}
+
+#Game{
+    border: solid #333 2px;
+    width: 100%;
+    aspect-ratio: 1;
 }
