--- a/Style.css
+++ b/Style.css
@@ -2,6 +2,7 @@
     --main_color: #454;
     --main_color_a: #44554410;
     --border-color: #333;
+    --crimson: #dc143c;
 }
 
 #moon{
@@ -161,7 +162,7 @@ header{
     }
     #bigScreen{
         display: block;
-        color: #ef0602;
+        color: var(--crimson);
     }
 }
 
@@ -173,21 +174,26 @@ header{
 }
 
 #Game{
-    border: solid #333 2px;
+    border: solid var(--border-color) 2px;
     width: 100%;
     aspect-ratio: 1;
 }
 #winLose{
+    display: flex;
+    display: none;
     width: 400px;
     height: 400px;
     position: absolute;
     z-index: 100;
-    background: #333;
-    display: flex;
+    background: var(--border-color);
     flex-direction: column;
     align-items: center;
     justify-content: center;
     *{
-        color: #dc143c
+        color: var(--crimson)
+    }
+    #score::before{
+        content: 'Score: ';
+        color: var(--crimson);
     }
 }
